[package]
name = "HARwash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.64", features = ["Blob", "File", "FileReader", "Url", "Event", "Window", "Document", "Element", "HtmlElement"] }
js-sys = "0.3.51"
